removed pdftex from hyperref package, fixed whitespace errors

--- a/db2-hash-routines.tex
+++ b/db2-hash-routines.tex
@@ -10,17 +10,16 @@
 \usepackage[nodayofweek]{datetime}
 \input{db2-hash-routines_info}
 \usepackage[
-  bookmarks=true, 
-  bookmarksnumbered=true, 
-  pdftitle={Documentation for db2-hash-routines}, 
-  pdfauthor={Helmut K. C. Tessarek}, 
-  pdfcreator={\CommitHash{}}, 
-  colorlinks=false, 
-  linkcolor={blue}, 
-  citecolor={blue}, 
-  backref=true, 
-  breaklinks=true, 
-  pdftex
+  bookmarks=true,
+  bookmarksnumbered=true,
+  pdftitle={Documentation for db2-hash-routines},
+  pdfauthor={Helmut K. C. Tessarek},
+  pdfcreator={\CommitHash{}},
+  colorlinks=false,
+  linkcolor={blue},
+  citecolor={blue},
+  backref=true,
+  breaklinks=true
 ]{hyperref}
 
 \newcommand{\stt}[1]{\tt \small #1}
