--- a/db2-hash-routines.tex
+++ b/db2-hash-routines.tex
@@ -45,7 +45,7 @@ db2-hash-routines is a package which provides \mbox{User Defined Functions} and 
 \vfill
 
 \begin{center}
-\href{http://mod-auth-ibmdb2.sourceforge.net}{http://mod-auth-ibmdb2.sourceforge.net}\\
+\href{http://tessus.github.io/db2-hash-routines}{http://tessus.github.io/db2-hash-routines}\\
 
 %\ifdata
 {\tiny \rm \showtext{Date: }\CommitDateTimeTz{} }
