updated FAQ, link page, and official web site link

--- a/faq.tex
+++ b/faq.tex
@@ -18,10 +18,4 @@
 \textbf{A:} This package contains User Defined Functions and Stored Procedures to generate and validate hashes in DB2. \\
 \\
 \textbf{Q:} How do I get support? \\
-\textbf{A:} Please submit support requests at the \href{http://sf.net/p/mod-auth-ibmdb2/support-requests}{Support Request Tracker} (hosted by sourceforge). \\
-\\
-\textbf{Q:} How do I submit bugs? \\
-\textbf{A:} Please submit bugs at the \href{http://sf.net/p/mod-auth-ibmdb2/bugs}{Bug Tracker} (hosted by sourceforge). \\
-\\
-\textbf{Q:} How do I submit a feature request? \\
-\textbf{A:} Please submit feature requests at the \href{http://sf.net/p/mod-auth-ibmdb2/feature-requests}{Feature Request Tracker} (hosted by sourceforge).
+\textbf{A:} Please submit a ticket at the \href{https://github.com/tessus/mod_authnz_ibmdb2/issues}{Issues Tracker} (hosted by github).
