--- a/links.tex
+++ b/links.tex
@@ -1,14 +1,8 @@
 \section{Links}
 \subsection{Official mod\_auth(nz)\_ibmdb2 website}
-\url{http://mod-auth-ibmdb2.sourceforge.net}
+\url{http://tessus.github.io/mod_authnz_ibmdb2}
 \subsection{Support Requests}
-\url{http://sf.net/p/mod-auth-ibmdb2/support-requests}
-\subsection{Feature Requests}
-\url{http://sf.net/p/mod-auth-ibmdb2/feature-requests}
-\subsection{Bugs}
-\url{http://sf.net/p/mod-auth-ibmdb2/bugs}
-\subsection{Release / Update Announcement Mailing List}
-\url{http://lists.sourceforge.net/lists/subscribe/mod-auth-ibmdb2-announce}
+\url{https://github.com/tessus/mod_authnz_ibmdb2/issues}
 \subsection{developerWorks article}
 mod\_auth\_ibmdb2: A novel authentication method for Apache\\
 \url{http://www.ibm.com/developerworks/db2/library/techarticle/dm-0407tessarek/}
