--- a/mod_authnz_ibmdb2.tex
+++ b/mod_authnz_ibmdb2.tex
@@ -46,7 +46,7 @@ mod\_authnz\_ibmdb2 is an Apache authentication module using IBM\textsuperscript
 \vfill
 
 \begin{center}
-\href{http://mod-auth-ibmdb2.sourceforge.net}{http://mod-auth-ibmdb2.sourceforge.net}\\
+\href{http://tessus.github.io/mod_authnz_ibmdb2}{http://tessus.github.io/mod\_authnz\_ibmdb2}\\
 
 {\tiny \rm \showtext{Date: }\CommitDateTimeTz{} }
 {\tiny \rm \showtext{Id: }\CommitHashAbbrev{} }
