add php scripts to link section

--- a/links.tex
+++ b/links.tex
@@ -3,6 +3,8 @@
 \url{http://tessus.github.io/mod_authnz_ibmdb2}
 \subsection{Support Requests}
 \url{https://github.com/tessus/mod_authnz_ibmdb2/issues}
+\subsection{PHP scripts to import users/groups}
+\mbox{\url{https://github.com/tessus/usr-grp-import-scripts/archive/master.zip}}
 \subsection{developerWorks article}
 mod\_auth\_ibmdb2: A novel authentication method for Apache\\
 \url{http://www.ibm.com/developerworks/db2/library/techarticle/dm-0407tessarek/}
@@ -10,3 +12,4 @@ mod\_auth\_ibmdb2: A novel authentication method for Apache\\
 \url{https://github.com/tessus/mod_authnz_ibmdb2}\\
 \url{https://github.com/tessus/mod_auth_ibmdb2}\\
 \url{https://github.com/tessus/db2-hash-routines}\\
+\url{https://github.com/tessus/usr-grp-import-scripts}\\
