better table layout

--- a/scripts.tex
+++ b/scripts.tex
@@ -9,7 +9,7 @@ You have to change the settings in the {\tt config.php} file for your environmen
 Here is a table of the relation between the directives for the \emph{mod\_authnz\_ibmdb2} module
 and the settings in the {\tt config.php} file:\\
 \\
-\begin{tabular}{@{} lll @{}}
+\begin{tabular}{@{} ll@{\hspace{5em}}l @{}}
 {\tt config.php} & & {\tt module directive}\\
 \hline
 & & \\
